# vision-graphql

./: Cargo.toml  README.md
benches/: sql_render.rs
crates/vision-graphql-cli/: Cargo.toml
crates/vision-graphql-cli/src/: analyze.rs  cmd_diff.rs  cmd_generate.rs  cmd_validate.rs  filter.rs  log_init.rs  main.rs  render.rs  report.rs
crates/vision-graphql-cli/tests/: cli_e2e.rs
docs/superpowers/plans/: 2026-04-17-vision-graphql-phase-1-core-select.md  2026-04-17-vision-graphql-phase-2-nested-relations.md  2026-04-17-vision-graphql-phase-3-aggregates-bypk-distinct.md  2026-04-17-vision-graphql-phase-4-mutations.md  2026-04-17-vision-graphql-phase-5-introspection.md  2026-04-17-vision-graphql-phase-6-builder-api.md  2026-04-17-vision-graphql-phase-7-operators-fragments.md  2026-04-17-vision-graphql-phase-8-polish.md  2026-04-22-nested-returning.md  2026-04-22-phase-2-nested-insert.md  2026-04-22-phase-3a-object-relation-nested-insert.md  2026-04-22-phase-3b-nested-on-conflict.md  2026-04-23-transaction-api.md  2026-05-09-cli-schema-gen.md
docs/superpowers/specs/: 2026-04-17-rust-hasura-orm-design.md  2026-04-22-phase-2-nested-insert-design.md  2026-04-22-phase-3a-object-relation-nested-insert-design.md  2026-04-22-phase-3b-nested-on-conflict-design.md  2026-04-23-transaction-api-design.md  2026-05-09-cli-schema-gen-design.md  2026-06-25-scope-policy-config-design.md
src/: ast.rs  builder.rs  engine.rs  error.rs  executor.rs  lib.rs  parser.rs  policy.rs  predicate.rs  schema.rs  scope.rs  scope_config.rs  sql.rs  types.rs
src/schema/: config.rs  introspect.rs  merge.rs  mod.rs
src/snapshots/: vision_graphql__sql__tests__render_aggregate_count_and_sum.snap  vision_graphql__sql__tests__render_aggregate_no_nodes.snap  vision_graphql__sql__tests__render_array_relation.snap  vision_graphql__sql__tests__render_by_pk_single_col.snap  vision_graphql__sql__tests__render_distinct_on_auto_prepends_order_by.snap  vision_graphql__sql__tests__render_insert_array_with_nested_relation_returning.snap  vision_graphql__sql__tests__render_insert_array_with_returning.snap  vision_graphql__sql__tests__render_insert_one.snap  vision_graphql__sql__tests__render_insert_with_nested_children.snap  vision_graphql__sql__tests__render_insert_with_nested_object.snap  vision_graphql__sql__tests__render_nested_on_conflict_do_nothing_rewrite.snap  vision_graphql__sql__tests__render_object_relation.snap  vision_graphql__sql__tests__render_order_limit_offset.snap  vision_graphql__sql__tests__render_plain_list.snap  vision_graphql__sql__tests__render_where_and_of_ops.snap  vision_graphql__sql__tests__render_where_eq_enum.snap  vision_graphql__sql__tests__render_where_eq_int.snap  vision_graphql__sql__tests__render_where_gte_date.snap  vision_graphql__sql__tests__render_where_in_enum_list.snap  vision_graphql__sql__tests__render_where_relation_exists.snap
tests/: integration_aggregate.rs  integration_builder.rs  integration_by_pk.rs  integration_distinct.rs  integration_introspect.rs  integration_mutation.rs  integration_nested.rs  integration_nested_insert.rs  integration_nested_insert_object.rs  integration_nested_on_conflict.rs  integration_operators.rs  integration_order_by_relation.rs  integration_read_only.rs  integration_scope.rs  integration_select.rs  integration_transaction.rs  integration_typed.rs  integration_types.rs  integration_views.rs
tests/fixtures/: read_only.toml  schema.toml  views.toml
