[package]
name = "vision-graphql-cli"
version = "0.5.0"
edition = "2021"
rust-version = "1.85"
description = "CLI to generate and validate vision-graphql schema overlays."
license = "MIT OR Apache-2.0"
repository = "https://github.com/oonxt/vision-graphql"

[[bin]]
name = "vision-gql"
path = "src/main.rs"

[dependencies]
vision-graphql      = { path = "../..", version = "0.5" }
clap                = { version = "4", features = ["derive"] }
sqlx                = { version = "0.9", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "json",
    "tls-rustls-ring-native-roots",
] }
tokio               = { version = "1", features = ["rt-multi-thread", "macros"] }
toml                = "0.8"
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
anyhow              = "1"
globset             = "0.4"
tracing             = "0.1"
tracing-subscriber  = "0.3"
time                = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
insta                  = "1"
testcontainers         = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
